--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 	"dependencies": {
 		"echarts": "5.2.2",
 		"history": "4.9.0",
+		"jquery": "^3.6.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-router-dom": "5.2.0"
 	},
 	"devDependencies": {
 		"@types/history": "4.7.8",
+		"@types/jquery": "^3.5.10",
 		"@types/react": "17.0.3",
 		"@types/react-dom": "17.0.3",
 		"@types/react-router-dom": "5.1.7",
